# des2026-hackaton

./: .gitignore  CLAUDE.md  README.md  hackaton_description.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/skills/agent-prompt/: SKILL.md
.claude/skills/calibrate/: SKILL.md
.claude/skills/cut-list/: SKILL.md
.claude/skills/day-of-brief/: SKILL.md
.claude/skills/demo-polish/: SKILL.md
.claude/skills/hackathon-pilot/: SKILL.md
.claude/skills/recon-summary/: SKILL.md
.claude/skills/robot-adapter/: SKILL.md
.claude/skills/swap-llm/: SKILL.md
.claude/skills/watch-rehearsal/: SKILL.md
.claude/skills/zgx-bootstrap/: SKILL.md
configs/: agent.gemini.yaml  agent.llama-server.yaml  agent.obstacle.yaml  agent.yaml  agent.zgx-nim.yaml
docs/: ARCHITECTURE.md  DAY_OF_BRIEF.md  DAY_OF_DECISIONS.md  DAY_OF_INTAKE.md  DAY_OF_TASKS.md  DEMO_SCRIPT.md  ENVERGE_TEST_PLAN.md  ONBOARDING.md  PREP_TODO.md  PRE_EVENT_CHECKLIST.md  REF.md  REHEARSALS.md  TECH_STACK.md  TEST_CUES.md  _config.yml  day_of_playbook.md  index.html  team_briefing.html  zgx_notes.md  zgx_overview.md
docs/_archive/: ONBOARDING.md  prior_art.md
docs/_layouts/: default.html
runs/: submit-backup.jsonl
scripts/: bootstrap_zgx.sh  demo_history.sh  zgx_recon.sh
src/hack/: __init__.py  __main__.py  cli.py
src/hack/actuators/: tts.py
src/hack/agent/: commentator.py  (+8 more)
tests/: test_adapter_failover.py  test_all_scenarios.py  test_motion.py  test_obstacle_scenarios.py  test_openai_compat_vlm.py  test_robot_adapter_stubs.py  test_robot_mock.py  test_tools.py
(+32 files in other folders)
